--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "babel-core": "6.22.1",
     "babel-helper-builder-react-jsx": "6.22.0",
+    "babel-helper-vue-jsx-merge-props": "^2.0.2",
     "babel-loader": "6.2.10",
     "babel-plugin-check-es2015-constants": "6.22.0",
     "babel-plugin-external-helpers": "6.22.0",
@@ -111,6 +112,7 @@
     "babel-plugin-transform-simplify-comparison-operators": "6.8.1",
     "babel-plugin-transform-strict-mode": "6.22.0",
     "babel-plugin-transform-undefined-to-void": "6.8.0",
+    "babel-plugin-transform-vue-jsx": "^3.3.0",
     "babel-plugin-undeclared-variables-check": "6.22.0",
     "babel-preset-babili": "0.0.10",
     "babel-preset-es2015": "6.22.0",
@@ -141,7 +143,7 @@
     "transpile",
     "transpiler"
   ],
-  "author": "Daniel Lo Nigro \u003cdaniel@dan.cx\u003e (http://dan.cx/)",
+  "author": "Daniel Lo Nigro <daniel@dan.cx> (http://dan.cx/)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Daniel15/babel-standalone/issues"
